# kdeclarative

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5DeclarativeConfig.cmake.in  KF6DeclarativeConfig.cmake.in  README.md  metainfo.yaml
Controls/: CMakeLists.txt  Mainpage.dox  README.md
Controls/autotests/: CMakeLists.txt  columnproxymodeltest.cpp
Controls/src/qmlcontrols/: CMakeLists.txt
Controls/src/qmlcontrols/draganddrop/: CMakeLists.txt
autotests/: CMakeLists.txt  columnproxymodeltest.cpp  columnproxymodeltest.h  configmoduletest.cpp  metadata.desktop  modeltest.cpp  modeltest.h  quickviewsharedengine.cpp  util.cpp  util.h
cmake/: Findepoxy.cmake
docs/: Doxyfile.local
po/af/: kdeclarative5.po  kdeclarative6.po
po/ar/: kdeclarative5.po  kdeclarative6.po
po/as/: kdeclarative5.po  kdeclarative6.po
po/ast/: kdeclarative5.po  kdeclarative6.po
po/az/: kdeclarative5.po  kdeclarative6.po
po/be/: kdeclarative5.po  kdeclarative6.po
po/be@latin/: kdeclarative5.po  kdeclarative6.po
po/bg/: kdeclarative5.po  (+1 more)
src/: CMakeLists.txt  Messages.sh  configpropertymap.cpp  configpropertymap.h  kdeclarative.cpp  kdeclarative.h  kdeclarative.qdocconf  qmlobject.cpp  qmlobject.h
src/calendarevents/: CMakeLists.txt  CalendarEventsConfig.cmake.in  calendarevents.qdoc  calendarevents.qdocconf  calendarevents_export.h  calendareventsplugin.cpp  calendareventsplugin.h  eventdata_p.cpp  kdeclarative-index.qdoc
src/draganddrop/: DeclarativeDragArea.cpp
src/kdeclarative/: CMakeLists.txt  configpropertymap.cpp  configpropertymap.h  kdeclarative.cpp  kdeclarative.h  qmlobject.cpp  qmlobject.h  qmlobjectsharedengine.cpp  qmlobjectsharedengine.h
src/kdeclarative/private/: kdeclarative_p.h  kiconprovider.cpp  kiconprovider_p.h  kioaccessmanagerfactory.cpp  kioaccessmanagerfactory_p.h  qmlobject_p.h  rootcontext.cpp  rootcontext_p.h
src/kpackagelauncherqml/: CMakeLists.txt  main.cpp
src/libkdeclarative/: CMakeLists.txt  kdeclarative.cpp
src/libkdeclarative/private/: kdeclarative_p.h
src/private/: kiconprovider.cpp  kiconprovider_p.h  kioaccessmanagerfactory.cpp  qmlobject_p.h  rootcontext.cpp  rootcontext_p.h
src/qmlcontrols/: CMakeLists.txt
src/qmlcontrols/draganddrop/: CMakeLists.txt  DeclarativeDragArea.cpp  DeclarativeDragArea.h  DeclarativeDragDropEvent.cpp  DeclarativeDragDropEvent.h  DeclarativeDropArea.cpp  DeclarativeDropArea.h  DeclarativeMimeData.cpp  DeclarativeMimeData.h  MimeDataWrapper.cpp  MimeDataWrapper.h  draganddrop.qdoc  draganddrop.qdocconf  draganddropplugin.cpp  draganddropplugin.h
src/qmlcontrols/graphicaleffects/: BadgeEffect.qml  CMakeLists.txt  Lanczos.qml  badge.frag  graphicaleffects.qdoc  graphicaleffects.qdocconf  lanczos2sharp.frag  lanczos2sharp.glsl  lanczos2sharp_core.frag  lanczos2sharp_core.glsl  preserveaspect.vert  preserveaspect_core.vert  qmldir
src/qmlcontrols/kcmcontrols/: CMakeLists.txt  kcmcontrolsplugin.cpp  kcmcontrolsplugin.h  settinghighlighterprivate.cpp  settinghighlighterprivate.h  settingstatebindingprivate.cpp  settingstatebindingprivate.h  settingstateproxy.cpp  settingstateproxy.h
src/qmlcontrols/kcmcontrols/qml/: AbstractKCM.qml  ContextualHelpButton.qml  GridDelegate.qml  GridView.qml  GridViewKCM.qml  ScrollView.qml  ScrollViewKCM.qml  SettingHighlighter.qml  SettingStateBinding.qml  SettingStateIndicator.qml  SimpleKCM.qml  qmldir
src/qmlcontrols/kcmcontrols/qml/private/: GridDelegateMenu.qml  GridViewInternal.qml
src/qmlcontrols/kconfig/: CMakeLists.txt  kauthorizedproxy.cpp  kauthorizedproxy.h  kconfigplugin.cpp  kconfigplugin.h
src/qmlcontrols/kcoreaddons/: CMakeLists.txt  formats.cpp  formats.h  kcoreaddonsplugin.cpp  kcoreaddonsplugin.h  kuserproxy.cpp  kuserproxy.h
src/qmlcontrols/kioplugin/: CMakeLists.txt  kioplugin.cpp  kioplugin.h  krunproxy.cpp  krunproxy.h
src/qmlcontrols/kquickcontrols/: CMakeLists.txt  ColorButton.qml  GHNSButton.qml  KeySequenceItem.qml  TextArea.qml  TextField.qml  Title.qml  kquickcontrols.qdoc  kquickcontrols.qdocconf  qmldir  types.h
src/qmlcontrols/kquickcontrols/private/: CMakeLists.txt  TextMenu.qml  enums.cpp  enums.h  ghnshelper.cpp  ghnshelper.h  keysequencehelper.cpp  keysequencehelper.h  keysequencevalidator.cpp  keysequencevalidator.h  kquickcontrolsprivateplugin.cpp  kquickcontrolsprivateplugin.h  qmldir  translationcontext.cpp  translationcontext.h
src/qmlcontrols/kquickcontrolsaddons/: CMakeLists.txt  Mainpage.dox  clipboard.cpp  clipboard.h  columnproxymodel.cpp  columnproxymodel.h  config-kquickcontrolsaddons.h.cmake  eventgenerator.cpp  eventgenerator.h  fallbacktaphandler.cpp  fallbacktaphandler.h  icondialog.cpp  icondialog.h  kcmshell.cpp  kcmshell.h  kquickcontrolsaddons.qdoc  kquickcontrolsaddons.qdocconf  kquickcontrolsaddonsplugin.cpp  kquickcontrolsaddonsplugin.h  mimedatabase.cpp  mimedatabase.h  mouseeventlistener.cpp  mouseeventlistener.h  plotter.cpp  plotter.h  qiconitem.cpp  qiconitem.h  qimageitem.cpp  qimageitem.h  qmldir  qpixmapitem.cpp  qpixmapitem.h
src/qmlcontrols/kwindowsystemplugin/: CMakeLists.txt  kwindowsystemplugin.cpp  kwindowsystemplugin.h  kwindowsystemproxy.cpp  kwindowsystemproxy.h
src/qmlpackagelauncher/: CMakeLists.txt  main.cpp  view.cpp  view.h
src/qtextracomponents/: CMakeLists.txt  qiconitem.cpp
src/quickaddons/: CMakeLists.txt  configmodule.cpp  configmodule.h  imagetexturescache.cpp  imagetexturescache.h  kpackageview.cpp  kpackageview.h  managedconfigmodule.cpp  managedconfigmodule.h  managedtexturenode.cpp  managedtexturenode.h  qtquicksettings.cpp  qtquicksettings.h  quickviewsharedengine.cpp  quickviewsharedengine.h  renderer.kcfg
tests/: CMakeLists.txt  colorButtonTest.qml  eventgenerator.qml  icondialog.qml  kdeclarativetest.cpp  keysequencetest.qml  plotter.qml  qiconitem_resize.qml  qiconitem_test.qml  qimageitemtest.cpp  qimageitemtest.qml  test.qml  titletest.qml
tests/helloworld/: metadata.desktop
tests/helloworld/contents/ui/: main.qml
tests/helloworldnowindow/: metadata.desktop
tests/helloworldnowindow/contents/ui/: main.qml
(+188 files in other folders)
